[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy_expl.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 18, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 36, 18, 18, 18 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 18, 18 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 18, 36, 18, 18 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 20 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "damage",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 17 ), SubResource( 18 ), SubResource( 17 ), SubResource( 18 ), SubResource( 17 ), SubResource( 18 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "attack",
"speed": 6.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 11.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 16, 48 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ViewRelative" type="Node2D" parent="."]

[node name="JumpCheck" type="RayCast2D" parent="ViewRelative"]
position = Vector2( 5, -7 )
enabled = true
cast_to = Vector2( 8, -3 )

[node name="WallCheck" type="RayCast2D" parent="ViewRelative"]
position = Vector2( 9, 4 )
enabled = true
cast_to = Vector2( 2, 0 )
collision_mask = 9

[node name="AnimatedSprite" type="AnimatedSprite" parent="ViewRelative"]
scale = Vector2( 1.0107, 1 )
z_index = 3
frames = SubResource( 3 )
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AttackExpl" type="AnimatedSprite" parent="."]
visible = false
z_index = 2
frames = SubResource( 16 )

[connection signal="animation_finished" from="ViewRelative/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AttackExpl" to="." method="_on_AttackExpl_animation_finished"]
